--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,7 +33,7 @@ jobs:
 
       - name: Build
         run: |
-          npm run deply
+          npm run deploy
 
       - name: Deploy
         uses: peaceiris/actions-gh-pages@v3
